# OracleWalk_V0.0.1

./: README.md
OracleWalk/: LICENSE  README.md  build_executable.sh  config.example.txt  imghdr.py  install_all_dependencies.bat  pyproject.toml  requirements.txt
OracleWalk/docs/: architecture.md  setup.md
OracleWalk/docs/reference/: backtest_framework_btc.py
OracleWalk/installers/: install_oraclewalk.bat  install_oraclewalk.ps1  install_oraclewalk.sh  run_oraclewalk.bat  run_oraclewalk.sh
OracleWalk/src/oraclewalk/: __init__.py  main.py  requirements.txt
OracleWalk/src/oraclewalk/config/: config_loader.py
OracleWalk/src/oraclewalk/core/: engine.py
OracleWalk/src/oraclewalk/dashboard/: __init__.py  server.py
OracleWalk/src/oraclewalk/dashboard/static/: index.html  oracleview.js  orderbook.html  tv.css
OracleWalk/src/oraclewalk/data/: data_handler.py  indicators.py  live_data.py  orderbook_data.py
OracleWalk/src/oraclewalk/execution/: execution_price_model.py  order_model.py  risk_manager.py  trade_executor.py  trade_logger.py
OracleWalk/src/oraclewalk/notifications/: telegram_notifier.py
OracleWalk/src/oraclewalk/optimization/: backtester.py  walk_forward.py
OracleWalk/src/oraclewalk/storage/: database.py
OracleWalk/src/oraclewalk/strategy/: base_strategy.py  inner_circle_trader.py  ma_rsi_strategy.py
OracleWalk/src/oraclewalk/utils/: logger.py
OracleWalk/tests/: test_backtester.py  test_config_loader.py
