[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "oraclewalk"
version = "0.1.0"
description = "OracleWalk - sistema de trading automatizado (Binance, ICT/FVG) com modos live e backtest."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"oraclewalk" = ["dashboard/static/**/*"]
